personal-website/src/index.css
html,
#root,
body {
  margin: 0;
  height: 100%;
}

:root {
  font-family: Futura, Helvetica, Arial, system-ui, Avenir, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #f8f8f9;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* hidden div so that the audio controls can be moved anywhere on the whole screen */
.screen {
  /* position: fixed; */
  top: 6em; /* Set top to the height of the header */
  left: 0;
  width: 100%;
  /* height: calc(100% - 6em); Set height to remaining space below the header */
  height: 100%;
  z-index: 0;
  width: 100%;
  overflow: hidden;
}

.info-section {
  position: absolute;
  top: 48%;
  left: 40%;
  transform: translate(-90%, -50%);
  padding: 10px;
  width: 23em;
  z-index: 500;
}

h1 {
  color: #5433ff;
  font-family: Futura;
  font-size: 1.8rem;
  font-style: italic;
  font-weight: 700;
  line-height: normal;
  width: 10em;
}

a {
  color: #000; /* Inherit color from parent */
  text-decoration: none; /* Remove underline */
}

a:hover {
  text-decoration: none; /* Add underline on hover if needed */
}

a:visited {
  color: #000; /* Inherit color from parent for visited links */
}

h2 {
  color: #000;
  font-family: Futura;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  width: 19em;
}

h3 {
  text-align: center;
  color: black;
}

.secret-text-div {
  position: absolute;
  top: 25%;
  left: 90%;
  transform: translate(-100%, -70%);
  padding: 10px;
  width: 18em;
  z-index: 1;
}

.secret-text {
  left: 50px;
  color: #f8f8f9;
  font-size: 1em;
}

.secret-text:hover {
  color: black;
}

/* .header-elements {
  padding: 10px;
  margin: 1em;
} */

a {
  text-decoration: none;
}

.linked-in {
  width: 2.6em;
  height: auto;
}

.github {
  width: 2.6em;
  height: auto;
}

.resume {
  width: 2.6em;
  height: auto;
}

.contact-me {
  width: 2.6em;
  height: auto;
}

.header {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 6em;
  width: 100vw;
  background-color: #f8f8f9;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.23);
}

.audio-visualizer {
  position: fixed;
  display: flex;
  flex-direction: column;
  border: #000;
  height: 50%;
  width: 100vw;
  overflow: hidden;
  z-index: 400;
  /* visibility: visible; */
}

.audio-visuals {
  border: 10px;
  border-color: white;
}

.audio-controls {
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-0%, -0%);
  padding: 10px;
  z-index: 2;
}

/* height doesn't actually change the height of the audio tag */
audio {
  width: 18em;
  cursor: pointer;
}

button:hover {
  cursor: pointer;
}

.playPrevBtn {
  margin-right: 0.5em;
  position: absolute;
  left: -10%; /* Align the button to the left edge of its container */
  top: 70%; /* Align the button vertically in the middle */
  transform: translateY(-50%); /* Adjust vertical position to center vertically */
  background: none;
  border: none;
}

.playNextBtn {
  margin-left: 0.5em;
  position: absolute;
  right: -10%; /* Align the button to the right edge of its container */
  top: 70%; /* Align the button vertically in the middle */
  transform: translateY(-50%); /* Adjust vertical position to center vertically */
  background: none;
  border: none;
}

.audio-controller {
  position: fixed;
  top: 6em;
  left: 0;
  width: 100%;
  height: calc(100% - 6em); /* Set height to remaining space below the header */
  background-color: rgba(0, 0, 0, 0);
}

.song-names {
  color: white;
  padding-bottom: 5px;
  font-size: 0.8em;
}

canvas {
  border: #000;
  overflow: hidden;
  margin: 0;
  padding: 0;
  /* display: block; */
  /* object-fit: contain; */
}

.mobile-text {
  display: none;
}

.header-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center; /* Center align items */
}

.header-item {
  flex: 1; /* Each item takes equal space */
  text-align: center; /* Center align text */
}

.header-item a {
  display: block; /* Make anchor tags block level */
  padding: 10px; /* Add padding for spacing */
  width: 10em;
}

.canvas-wrapper {
  width: 100%;

  height: calc(100vh - 6em); /* Adjust as needed */
  clip-path: url(#my-clip-path);
  overflow: hidden;
  bottom: 0;
}

#gradient-canvas {
  width: 100%;
  height: 100vh;
  --gradient-color-1: #1cc6ff;
  --gradient-color-2: #43ffd2;
  --gradient-color-3: #5433ff;

  /* position: absolute; */

  /* clip-path: url(#my-clip-path); */
  /* clip-path: polygon(
    100% 0.1%,
    100% 0.1%,
    95.018% 12.606%,
    87.987% 21.718%,
    79.257% 28.203%,
    69.178% 32.833%,
    58.1% 36.375%,
    46.374% 39.599%,
    34.351% 43.275%,
    22.381% 48.17%,
    10.814% 55.056%,
    0% 64.7%,
    0% 100%,
    100% 100%,
    100% 0.1%
  );
  -webkit-clip-path: polygon(
    100% 0.1%,
    100% 0.1%,
    95.018% 12.606%,
    87.987% 21.718%,
    79.257% 28.203%,
    69.178% 32.833%,
    58.1% 36.375%,
    46.374% 39.599%,
    34.351% 43.275%,
    22.381% 48.17%,
    10.814% 55.056%,
    0% 64.7%,
    0% 100%,
    100% 100%,
    100% 0.1%
  ); */

  animation: gradient-animation 2000ms ease-in forwards;
}

@keyframes gradient-animation {
  from {
    opacity: 0%;
  }
  to {
    opacity: 100%;
  }
}

/* Media Query for mobile */
@media only screen and (max-width: 768px) {
  .canvas-wrapper {
    width: 100%;

    height: calc(100vh -6em); /* Adjust as needed */
    clip-path: url(#my-clip-path-mobile);
    overflow: hidden;
    bottom: 0;
  }

  .desktop-text {
    display: none;
  }

  .mobile-text {
    display: block;
  }

  .header {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
  }

  .header-list {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
  }

  .header-item a {
    display: block;
    padding: 10px;
    width: 10em;
  }

  .info-section {
    position: absolute;
    top: 40%;
    left: 80%;
    max-width: 18em;
    z-index: 1;
    overflow: hidden;
  }

  .secret-text {
    display: none;
  }

  h1 {
    font-size: 1.2em;
  }

  .github,
  .linked-in,
  .contact-me,
  .resume {
    width: 2em;
  }
}

@media only screen and (min-height: 768px) and (max-width: 768px) {
  h1 {
    font-size: 1.7em;
  }

  .info-section-h2 {
    font-size: 1em;
  }

  .info-section {
    position: absolute;
    top: 35%;
    left: 80%;
    max-width: 18em;
    z-index: 1;
    overflow: hidden;
    word-wrap: break-word;
  }

  .github,
  .linked-in,
  .contact-me,
  .resume {
    width: 2.2em;
  }
}

